--- a/css/main.css
+++ b/css/main.css
@@ -5,9 +5,9 @@ p{
     text-align:justify;
     color:#333333;
     font-weight:400;
-    
+
 }
-.main{
+.sectionOffer{
     padding-top:30px;
     padding-bottom:30px;
     height:auto;
@@ -15,32 +15,31 @@ p{
     color:#333333;
     text-align:center;
 }
-.main-center{
+.sectionOffer > h1{
+    margin-top:20px;
+    margin-bottom:20px;
+    text-shadow:2px 2px 3px #000000;
+    color:#46A0D5;
+    font-weight:900;
+    letter-spacing: 2px;
+    font-size:300%;
+}
+.companyOffer{
     margin-left:auto;
     margin-right:auto;
     width:353px;
     min-height:200px;
 }
-.main > h1{
-    margin-top:20px;
-    margin-bottom:20px;
-    text-shadow:2px 2px 3px #000000; 
-    color:#46A0D5;
-    font-weight:900;
-    letter-spacing: 2px;
-    font-size:300%;
-    
-}
-.main-box{
+.offer{
     position:absolute;
     display:none;
 }
-.main-box > i{
+.offer > i{
     font-size:300%;
     padding-right:10px;
     padding-bottom:10px;
 }
-.main-box > h1{
+.offer > h1{
     font-size:200%;
     font-weight:900;
     text-shadow:1px 1px 1px #000000;
@@ -51,17 +50,17 @@ p{
     padding:0;
     float:left;
 }
-.main-box > p{
+.offer > p{
     font-size:100%;
     width:353px;
     text-align:justify;
     color:#333333;
     font-weight:400;
-   
+
 }
-.active{
-    display:block;   
-    
+.offerActive{
+    display:block;
+
 }
     /* DOTS */
 .dots{
@@ -70,7 +69,7 @@ p{
     margin-left:auto;
     margin-right:auto;
     width:100px;
-    text-align:center;   
+    text-align:center;
 }
 .dot{
     display:inline-block;
@@ -91,11 +90,11 @@ p{
     opacity:1;
     cursor:pointer;
 }
-.active_dot{
-    opacity:1;   
+.dotActive{
+    opacity:1;
 }
 /*KONIEC DOTS */
-.btn{
+.btnOne{
     display:inline-block;
     margin: 0 auto;
     background-color:#1ABB9C;
@@ -103,16 +102,16 @@ p{
     padding: 10px 15px 10px;
     border-radius:3px 6px 3px;
     color:#ffffff;
-    font-size:150%; 
-    font-weight:300; 
+    font-size:150%;
+    font-weight:300;
     text-shadow:1px 1px 2px #000000;
 }
-.btn:hover{
+.btnOne:hover{
     background-color:#17A78B;
     cursor:pointer;
  }
-.btn_n{
-    float:right; 
+.btnTwo{
+    float:right;
     color:#333333;
     -webkit-transition: all 0.4s;
     -moz-transition: all 0.4s;
@@ -120,7 +119,7 @@ p{
     -o-transition: all 0.4s;
     transition: all 0.4s;
 }
-.btn_n:hover{
+.btnTwo:hover{
     color:#1ABB9C;
 }
 /*O nas*/
@@ -135,12 +134,12 @@ p{
     .about > h1{
         margin-top:20px;
         margin-bottom:20px;
-        text-shadow:2px 2px 3px #000000; 
+        text-shadow:2px 2px 3px #000000;
         color:#46A0D5;
         font-weight:900;
         letter-spacing: 2px;
         font-size:300%;
-    
+
 }
     .about > p{
         padding-left:20%;
@@ -148,7 +147,7 @@ p{
         /*text-indent:50px;  Wcięcie*/
     }
  /*Newsy*/
-    .present{
+  /*  .present{
         padding-top:30px;
         padding-bottom:30px;
         height:auto;
@@ -159,13 +158,13 @@ p{
     .present > h1{
         margin-top:20px;
         margin-bottom:20px;
-        text-shadow:2px 2px 3px #000000; 
+        text-shadow:2px 2px 3px #000000;
         color:#46A0D5;
         font-weight:900;
         letter-spacing: 2px;
         font-size:300%;
 
-}   
+} */
 /*Kontakt*/
     .contact{
         padding-top:30px;
@@ -181,7 +180,7 @@ p{
     .contact > h1{
         margin-top:20px;
         margin-bottom:20px;
-        text-shadow:2px 2px 3px #000000; 
+        text-shadow:2px 2px 3px #000000;
         color:#46A0D5;
         font-weight:900;
         letter-spacing: 2px;
@@ -192,7 +191,7 @@ p{
         padding-right:25%;
     }
 /*Sprzet*/
-    .cars{
+    .sectionPresentation{
         height:auto;
         overflow:hidden;
         width:100%;
@@ -202,31 +201,31 @@ p{
         border-top: 1px solid #d8d8d8;
         border-bottom: 1px solid #d8d8d8;
     }
-    .main_images{
+    .presentationPictures{
         background-color:#000000;
         float:left;
         width:90%;
         margin:0;
         padding:0;
     }
-    .main_img{
-        display:none; 
+    .gearPicture{
+        display:none;
         position:absolute;
     }
-    .main_img img{
+    .gearPicture img{
         width:100%;
         height:auto;
         padding:0;
         border:0;
         margin:0;
     }
-    .active_img{
+    .pictureActive{
         position:relative;
-        display:block; 
+        display:block;
         padding:0;
-        margin-bottom:-4px;  
+        margin-bottom:-4px;
     }
-    .arrow_left, .arrow_right{
+    .arrowLeft, .arrowRight{
         margin-top:13%;
         width:5%;
         float:left;
@@ -237,11 +236,11 @@ p{
         -moz-transition: all 0.4s;
         -ms-transition: all 0.4s;
         -o-transition: all 0.4s;
-        transition: all 0.4s; 
+        transition: all 0.4s;
     }
-    .arrow_left:hover{
+    .arrowLeft:hover{
         color:#B90B25;
     }
-    .arrow_right:hover{
+    .arrowRight:hover{
         color:#B90B25;
     }
