--- a/css/main.css
+++ b/css/main.css
@@ -132,8 +132,8 @@ p{
         text-align:center;
     }
     .about > h1{
-        margin-top:20px;
-        margin-bottom:20px;
+        margin-top:30px;
+        margin-bottom:30px;
         text-shadow:2px 2px 3px #000000;
         color:#46A0D5;
         font-weight:900;
@@ -142,9 +142,9 @@ p{
 
 }
     .about > p{
-        padding-left:20%;
-        padding-right:20%;
-        /*text-indent:50px;  Wcięcie*/
+        padding-left:15%;
+        padding-right:15%;
+        /*text-indent:50px; */
     }
  /*Newsy*/
   /*  .present{
